# jit-call

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: CompileBitcode.cmake
include/jitcall/: Bits.h  Result.h  context.h  jitcall.h  wrapper.h
src/: Result.cpp  context.cpp  wrapper.cpp
test/: CMakeLists.txt  load_module.cpp  main.cpp  util.cpp  util.h
test/inputs/: longadd.c  yneg.bc  yneg.c
test/src/: LoadModule.cpp  Result.cpp  load_module.cpp  main.cpp  util.cpp  util.h  wrapper.cpp
